[gd_scene load_steps=29 format=2]

[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Textures/LightTRansparetn.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HelperScenes/UI/StorePanelBool.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=8]
[ext_resource path="res://Scripts/UI/StorePage.gd" type="Script" id=9]
[ext_resource path="res://Resources/Textures/FX/pixel.png" type="Texture" id=10]
[ext_resource path="res://Scripts/UI/StoreSuperPanel.gd" type="Script" id=11]
[ext_resource path="res://Resources/Textures/Items/bullet-pixel4.png" type="Texture" id=12]
[ext_resource path="res://Resources/Textures/Items/bullet-pixel3.png" type="Texture" id=13]
[ext_resource path="res://Resources/Textures/Items/bullet-pixel2.png" type="Texture" id=14]
[ext_resource path="res://Resources/Textures/Entities/Player2.png" type="Texture" id=15]
[ext_resource path="res://Resources/Textures/Entities/Player3.png" type="Texture" id=16]
[ext_resource path="res://Resources/Textures/Entities/player5.png" type="Texture" id=17]
[ext_resource path="res://Resources/Textures/Entities/player4.png" type="Texture" id=18]
[ext_resource path="res://Resources/Audio/Music/Opalescence Shop.wav" type="AudioStream" id=19]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 25.021, 1 )
flag_disable_z = true
direction = Vector3( -7.829, 0, 0 )
spread = 138.1
gravity = Vector3( -1500, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 3.0
scale_random = 1.0

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="StorePage" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
position = Vector2( -279, -183 )
scale = Vector2( 15.0703, 8.64844 )
texture = ExtResource( 1 )
centered = false

[node name="UI" type="Node2D" parent="."]
position = Vector2( 482, 406 )

[node name="SepBar" type="Sprite" parent="UI"]
position = Vector2( -29.9999, -117.09 )
scale = Vector2( 450, 1.82 )
texture = ExtResource( 10 )

[node name="SepBar2" type="Sprite" parent="UI"]
position = Vector2( -29.9999, 38.91 )
scale = Vector2( 450, 1.82 )
texture = ExtResource( 10 )

[node name="Panels" type="Node2D" parent="UI"]

[node name="StoreSuperPanel" type="Node2D" parent="UI/Panels"]
position = Vector2( -1, -1 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Game Modes"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel"]
position = Vector2( 61.5385, 5.49454 )
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool4" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Challenge Game Mode"
setting_name = "challenge_mode_unlocked"
price = 400000

[node name="StorePanelBool" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 464.92, -3.38129 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard Hard Mode"
setting_name = "hard_mode_unlocked"
price = 300000

[node name="StorePanelBool2" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 839.56, 3.05176e-05 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard Extra Hard Mode"
setting_name = "extra_hard_mode_unlocked"
price = 700000

[node name="StorePanelBool3" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 1293.41, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard NIGHTMARE Mode"
setting_name = "nightmare_mode_unlocked"
price = 2000000

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel2" type="Node2D" parent="UI/Panels"]
position = Vector2( 3, 217 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Pellet Types"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel2"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel2"]
position = Vector2( 27.4725, 5.49454 )
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool5" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
modulate = Color( 0.462745, 0.847059, 1, 1 )
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Target-Seeking Pellets"
setting_name = "bullet2_is_unlocked"
price = 500000

[node name="Bullet-pixel2" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool5"]
position = Vector2( 50, -65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="StorePanelBool6" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
modulate = Color( 1, 0.282353, 0, 1 )
position = Vector2( 406.593, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Heavy Pellets"
setting_name = "bullet3_is_unlocked"
price = 500000

[node name="Bullet-pixel3" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool6"]
position = Vector2( 50, -65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="StorePanelBool9" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
modulate = Color( 0.0916443, 0.710938, 0.362585, 1 )
position = Vector2( 823.077, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Scatter Shot Pellets"
setting_name = "bullet4_is_unlocked"
price = 500000

[node name="Bullet-pixel4" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool9"]
position = Vector2( 50, -65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel2"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel3" type="Node2D" parent="UI/Panels"]
position = Vector2( 3, 421 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Player Types"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel3"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel3"]
position = Vector2( 27.4725, 5.49451 )
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool7" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Laser-er"
setting_name = "player2_is_unlocked"
price = 1000000

[node name="Player2" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool7"]
position = Vector2( 60, -65 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 15 )

[node name="StorePanelBool8" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 400, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Gunner"
setting_name = "player3_is_unlocked"
price = 1000000

[node name="Player3" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool8"]
position = Vector2( 60, -65 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )

[node name="StorePanelBool9" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 1100, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Bomber"
setting_name = "player4_is_unlocked"
price = 1000000

[node name="Player4" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool9"]
position = Vector2( 60, -65 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 18 )

[node name="StorePanelBool10" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 1800, -2.2 )
scale = Vector2( 1.0989, 1.0989 )
title = "Speeder"
setting_name = "player5_is_unlocked"
price = 1000000

[node name="Player5" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool10"]
position = Vector2( 60, -65 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 17 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel3"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel4" type="Node2D" parent="UI/Panels"]
position = Vector2( 6, 635 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Misc."

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel4"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel4"]
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool10" parent="UI/Panels/StoreSuperPanel4/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
title = "Mono-color Scheme"
setting_name = "monocolor_mode_unlocked"
price = 350000

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel4"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="Darkener" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -769, 49 )
scale = Vector2( 15.0937, 3.15625 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener2" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -598, -124 )
scale = Vector2( 2.47656, 1.35938 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener3" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( 191, -124 )
scale = Vector2( 6.46094, 1.35156 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener4" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -761, -589 )
scale = Vector2( 15.0937, 3.34375 )
texture = ExtResource( 1 )
centered = false

[node name="BackButton" type="Button" parent="UI"]
margin_left = 569.0
margin_top = 218.0
margin_right = 741.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Back"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/BackButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/BackButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="ResetButton" type="Button" parent="UI"]
visible = false
margin_left = 546.0
margin_top = 102.0
margin_right = 758.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Reset"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="AddPointButton" type="Button" parent="UI"]
visible = false
margin_left = 363.0
margin_top = 160.0
margin_right = 775.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Add Points"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/AddPointButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/AddPointButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="StoreLabel" type="Label" parent="."]
margin_left = 56.0
margin_top = 66.0
margin_right = 360.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 4 )
text = "STORE"

[node name="PointsLabel" type="Label" parent="."]
margin_left = 445.0
margin_top = 100.0
margin_right = 685.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 5 )
text = "Points: "

[node name="NextPanelButton" type="Button" parent="."]
margin_left = 42.0
margin_top = 462.0
margin_right = 841.0
margin_bottom = 698.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="LastPanelButton" type="Button" parent="."]
margin_left = 49.0
margin_top = 10.0
margin_right = 848.0
margin_bottom = 268.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="SuperPanelNextButton" type="Button" parent="."]
margin_left = 683.0
margin_top = 4.0
margin_right = 1376.0
margin_bottom = 718.0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="SuperPanelLastButton" type="Button" parent="."]
margin_left = -471.0
margin_top = 14.0
margin_right = 222.0
margin_bottom = 728.0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 517.75, 113 )
scale = Vector2( 2.44125, 0.46 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 4.0
autoplay = true
script = ExtResource( 2 )
default_vol = 4.0
is_music = true

[connection signal="mouse_entered" from="UI/BackButton" to="UI/BackButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/BackButton" to="UI/BackButton" method="mouse_exited"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="UI/ResetButton" to="UI/ResetButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/ResetButton" to="UI/ResetButton" method="mouse_exited"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="mouse_entered" from="UI/AddPointButton" to="UI/AddPointButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/AddPointButton" to="UI/AddPointButton" method="mouse_exited"]
[connection signal="pressed" from="UI/AddPointButton" to="." method="_on_AddPointButton_pressed"]
[connection signal="pressed" from="NextPanelButton" to="." method="_on_NextPanelButton_pressed"]
[connection signal="pressed" from="LastPanelButton" to="." method="_on_LastPanelButton_pressed"]
[connection signal="pressed" from="SuperPanelNextButton" to="." method="_on_SuperPanelNextButton_pressed"]
[connection signal="pressed" from="SuperPanelLastButton" to="." method="_on_SuperPanelLastButton_pressed"]
